Added Search screen and search controller

--- a/Weather App/Weather App/User Interface/Main.storyboard
+++ b/Weather App/Weather App/User Interface/Main.storyboard
@@ -185,7 +185,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="147.82608695652175" y="527.67857142857144"/>
+            <point key="canvasLocation" x="-687" y="524"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="2DG-A5-HE0">
@@ -199,15 +199,50 @@
                     </tabBar>
                     <connections>
                         <segue destination="Y6W-OH-hqX" kind="relationship" relationship="viewControllers" id="DsT-0v-BbW"/>
+                        <segue destination="u3A-fe-hvu" kind="relationship" relationship="viewControllers" id="AQC-q4-tNy"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I9y-y1-Scr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="149" y="-215"/>
         </scene>
+        <!--Search-->
+        <scene sceneID="L2o-Zp-RGR">
+            <objects>
+                <navigationController id="u3A-fe-hvu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Search" selectedImage="magnifyingglass" catalog="system" id="yNP-3A-2TL"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="2N6-1t-cbt">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="joM-bp-GsU" kind="relationship" relationship="rootViewController" id="JB8-I3-2a1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N0P-Ue-lha" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="148" y="524"/>
+        </scene>
+        <!--Search View Controller-->
+        <scene sceneID="why-k9-R1G">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="joM-bp-GsU" customClass="SearchViewController" customModule="Weather_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bzT-YO-QBt">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="QIO-B2-D92"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="bUe-Fu-VWx"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l7I-tb-dho" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="148" y="1218"/>
+        </scene>
     </scenes>
     <resources>
         <image name="house" catalog="system" width="128" height="106"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="sun.min.fill" catalog="system" width="128" height="121"/>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
