--- a/Weather App/Weather App/User Interface/Main.storyboard
+++ b/Weather App/Weather App/User Interface/Main.storyboard
@@ -210,7 +210,7 @@
         <scene sceneID="L2o-Zp-RGR">
             <objects>
                 <navigationController id="u3A-fe-hvu" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Search" selectedImage="magnifyingglass" catalog="system" id="yNP-3A-2TL"/>
+                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="yNP-3A-2TL"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="2N6-1t-cbt">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -230,14 +230,64 @@
                     <view key="view" contentMode="scaleToFill" id="bzT-YO-QBt">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="DUf-GY-fQq">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="sectionIndexBackgroundColor" red="0.34456250309999997" green="0.57414737739999999" blue="0.50114165109999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchTableViewCell" id="ycl-vI-amV">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ycl-vI-amV" id="SYy-RW-89S">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="QIO-B2-D92"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="DUf-GY-fQq" firstAttribute="leading" secondItem="QIO-B2-D92" secondAttribute="leading" id="Fot-vr-1uD"/>
+                            <constraint firstItem="DUf-GY-fQq" firstAttribute="top" secondItem="QIO-B2-D92" secondAttribute="top" id="HWT-WH-vCu"/>
+                            <constraint firstItem="QIO-B2-D92" firstAttribute="trailing" secondItem="DUf-GY-fQq" secondAttribute="trailing" id="gK3-Zh-EH1"/>
+                            <constraint firstItem="QIO-B2-D92" firstAttribute="bottom" secondItem="DUf-GY-fQq" secondAttribute="bottom" id="pjt-ad-Kbd"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="bUe-Fu-VWx"/>
+                    <connections>
+                        <outlet property="searchTableView" destination="DUf-GY-fQq" id="R0M-Wr-3yd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l7I-tb-dho" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="148" y="1218"/>
+            <point key="canvasLocation" x="147.82608695652175" y="1217.4107142857142"/>
+        </scene>
+        <!--Results View Controller-->
+        <scene sceneID="rFS-Si-Vf5">
+            <objects>
+                <viewController id="acj-8c-8nU" customClass="ResultsViewController" customModule="Weather_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9A3-Vz-D7y">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vhK-wy-Oro">
+                                <rect key="frame" x="186" y="163" width="39" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="b0i-xl-2DH"/>
+                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sZK-c5-gum" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="148" y="1894"/>
         </scene>
     </scenes>
     <resources>
@@ -249,6 +299,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBrownColor">
+            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
