Added functionality to save a location from landing screen

--- a/Weather App/Weather App/User Interface/Main.storyboard
+++ b/Weather App/Weather App/User Interface/Main.storyboard
@@ -25,7 +25,7 @@
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xbR-FR-qhG">
                                                 <rect key="frame" x="0.0" y="310" width="414" height="75"/>
-                                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VOB-UC-UJI">
                                                 <rect key="frame" x="207" y="135" width="0.0" height="0.0"/>
@@ -91,6 +91,17 @@
                                                     <action selector="switchDidChange:" destination="Y6W-OH-hqX" eventType="valueChanged" id="3Th-9O-EUI"/>
                                                 </connections>
                                             </switch>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KxF-g2-yih">
+                                                <rect key="frame" x="19" y="8" width="77" height="31"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="filled" title="Save">
+                                                    <color key="baseBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="saveButtonTapped" destination="Y6W-OH-hqX" eventType="touchUpInside" id="zDF-gd-UIn"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -208,6 +219,7 @@
                         <outlet property="forecastTableView" destination="x3h-Rc-YFj" id="lcC-Ha-Z8v"/>
                         <outlet property="maxTempreture" destination="DoC-v7-bFw" id="Ww7-12-mQc"/>
                         <outlet property="minTempreture" destination="REh-d1-lE7" id="hbf-gY-GVt"/>
+                        <outlet property="saveButton" destination="KxF-g2-yih" id="5D9-KE-BIf"/>
                         <outlet property="tempreture" destination="VOB-UC-UJI" id="DlO-Vh-QZ4"/>
                         <outlet property="themeSwitch" destination="Cqr-Ug-Kni" id="qzq-Ol-KDy"/>
                         <outlet property="weather" destination="4yb-a7-hVR" id="m0B-vZ-MXr"/>
@@ -231,6 +243,7 @@
                     <connections>
                         <segue destination="Y6W-OH-hqX" kind="relationship" relationship="viewControllers" id="DsT-0v-BbW"/>
                         <segue destination="u3A-fe-hvu" kind="relationship" relationship="viewControllers" id="AQC-q4-tNy"/>
+                        <segue destination="FXl-OE-Fid" kind="relationship" relationship="viewControllers" id="9F5-8r-yaO"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I9y-y1-Scr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -253,6 +266,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N0P-Ue-lha" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="148" y="524"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="5uh-5K-G9N">
+            <objects>
+                <navigationController id="FXl-OE-Fid" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="CHO-ns-7v8"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="LgI-lh-Gre">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="tcp-d4-orm" kind="relationship" relationship="rootViewController" id="xgg-rH-Ok8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dsQ-B2-Vi5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="991" y="524"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="why-k9-R1G">
@@ -315,45 +345,34 @@
             </objects>
             <point key="canvasLocation" x="147.82608695652175" y="1217.4107142857142"/>
         </scene>
-        <!--Results View Controller-->
-        <scene sceneID="rFS-Si-Vf5">
+        <!--View Controller-->
+        <scene sceneID="N8l-bG-KpB">
             <objects>
-                <viewController id="acj-8c-8nU" customClass="ResultsViewController" customModule="Weather_App" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="9A3-Vz-D7y">
+                <viewController id="tcp-d4-orm" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QLc-GY-upX">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vhK-wy-Oro">
-                                <rect key="frame" x="186" y="163" width="39" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="b0i-xl-2DH"/>
-                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                        <viewLayoutGuide key="safeArea" id="Jta-EV-yp7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="fxI-0c-TYJ"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sZK-c5-gum" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8X2-KP-MVN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="148" y="1894"/>
+            <point key="canvasLocation" x="990" y="1217"/>
         </scene>
     </scenes>
     <resources>
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <namedColor name="AccentColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </namedColor>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
